# dash-background-callbacks-pyinstaller

./: README.md  build.spec  debuglc.spec  main.py  pyproject.toml  requirements.txt
long_callbacks/: long_callbacks.py
