[tool.poetry]
name = "2023-debug-long-callbacks"
version = "0.1.0"
description = ""
authors = ["Jon Thompson <jjt@tutanota.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
dash = "^2.8.0"
diskcache = "^5.4.0"
multiprocess = "^0.70.14"
psutil = "^5.9.4"
pyinstaller = "^5.7.0"

[tool.poetry.dev-dependencies]
dash = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
